Fix an alignment issue and reduce header font size

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -71,7 +71,7 @@ header{
 
 .header-text{
 	float: left;
-	font-size: 2em;
+	font-size: 1.6em;
 	line-height: 1em;
 }
 
